Updated this project to use java 9 modules