@@ -12,7 +12,7 @@ buildscript {
 apply plugin: 'com.jfrog.bintray'
 
 group 'onethreeseven'
-version '0.0.3-SNAPSHOT'
+version '0.0.4'
 
 allprojects {
     repositories {
@@ -26,12 +26,52 @@ allprojects {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile group: 'com.google.code.findbugs', name: 'jsr305', version: '2.0.1'
+}
+
+ext.moduleName = 'onethreeseven.common'
+
+compileJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+        ]
+        classpath = files()
+    }
+}
+
+compileTestJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'junit',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+        ]
+        classpath = files()
+    }
+}
+
+test {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-MODULE-PATH',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+        ]
+        classpath = files()
+    }
 }
 
 jar {
+    inputs.property("moduleName", moduleName)
     manifest {
-        attributes("Implementation-Title": project.name,
+        attributes(
+                'Automatic-Module-Name': moduleName,
+                "Implementation-Title": project.name,
                 "Implementation-Version": version,
                 'Built-By': System.getProperty('user.name'),
                 'Built-Date': new Date(),
